<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:padding="32dp">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_view_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_first_name"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/text_view_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_last_name"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/text_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_date_of_birth"
                android:textSize="18sp"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_log_out"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/log_out" />
    </FrameLayout>
</layout>