<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signup.SecondSignUpFragment">
    <data>
        <variable
            name="viewModel"
            type="space.pixelsg.myalbum.ui.signup.SecondSignUpViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_margin="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:textSize="32sp"
                android:text="@string/a_few_more_steps"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    rxEditText="@{viewModel.phoneSubject}"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    rxEditText="@{viewModel.emailSubject}"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    rxEditText="@{viewModel.passwordSubject}"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/password_info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/text_view_pass_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_must_be_at_least_6_symbols" />
                <TextView
                    android:id="@+id/text_view_pass_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_must_contain_a_number" />
                <TextView
                    android:id="@+id/text_view_pass_letter_lower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_must_contain_a_lower_letter" />
                <TextView
                    android:id="@+id/text_view_pass_letter_upper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_must_contain_a_upper_letter" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_margin="48dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
    </FrameLayout>
</layout>