<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signup.FirstSignUpFragment">
    <data>
        <variable
            name="viewModel"
            type="space.pixelsg.myalbum.ui.signup.FirstSignUpViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_margin="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:textSize="32sp"
                android:text="@string/registration"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:errorEnabled="true"
                app:errorTextColor="?attr/colorError">

                <com.google.android.material.textfield.TextInputEditText
                    rxEditText="@{viewModel.firstNameSubject}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorTextColor="?attr/colorError"
                app:errorEnabled="true"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    rxEditText="@{viewModel.lastNameSubject}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/date_of_birth"
                app:counterMaxLength="10"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_date"
                    rxEditText="@{viewModel.dateSubject}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_margin="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/next_step" />

    </FrameLayout>
</layout>